--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -7,6 +7,10 @@ include ../../blocks/form-elements/checkbox/checkbox
 include ../../blocks/form-elements/radio-btn/radio-btn
 include ../../blocks/form-elements/toggle/toggle
 include ../../blocks/form-elements/rate-btn/rate-btn
+include ../../blocks/form-elements/rich-checkbox/rich-checkbox
+include ../../blocks/form-elements/buttons/buttons
+include ../../blocks/form-elements/pagination/pagination
+include ../../blocks/form-elements/bullet-list/bullet-list
 
 block title
     | Form Elements
@@ -218,26 +222,13 @@ block form-section
                     form(action="")
                         +formElementsHeader('rate button')
                         .form-elements__rate-wrapper
-                            +rateButton('star', 'star_border')
-                            //- .form-elements__rate
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star_border
-                            //- .form-elements__rate.form-elements__rate--right
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //-     i(class="rating__icon") star
-                            //- доделать рейтинг
+                            +rateButton('star', 'star_border', '')
+                            +rateButton('star', '', 'form-elements__rate--right')
 
                 .form-elements-item
                     .form-elements__dropdown
                         form(action="")
-                            .form-elements__descr
-                                span dropdown
+                            +formElementsHeader('dropdown')
                             .form-elements__input--dropdown
                                 input(class="text-field--dropdown" placeholder="Сколько гостей" readonly="readonly")
                                 i(class="material-icons") expand_more
@@ -263,32 +254,17 @@ block form-section
                                     button(class="apply-btn") Применить
 
                 .form-elements-item
-                    .form-elements__descr
-                        span Rich Checkbox Buttons
+                    +formElementsHeader('Rich Checkbox Buttons')
                     .form-elements__rich-checkbox
-                        div(class="rich-checkbox__wrapper")
-                            div(class="checkbox__marks")
-                                i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-hall")
-                            label(class="rich-checkbox rich-checkbox__title" for="checkbox-hall") Широкий коридор
-                                input(class="rich-checkbox__input" type="checkbox" id="checkbox-hall" data-type="hall")
-                                div(class="rich-checkbox__descr") Ширина коридоров в номере не менее 91 см.
+                        +richCheckbox('mark-hall', 'checkbox-hall', 'Широкий коридор', 'checkbox-hall', 'hall', 'Ширина коридоров в номере не менее 91 см.')
+                        +richCheckbox('mark-specialist', 'checkbox-specialist', 'Помощник для инвалидов', 'checkbox-specialist', 'specialist', 'На 1 этаже вас встретит специалист и проводит до номера.')
 
-                        div(class="rich-checkbox__wrapper")
-                            div(class="checkbox__marks")
-                                i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-specialist")
-                            label(class="rich-checkbox rich-checkbox__title" for="checkbox-specialist") Помощник для инвалидов
-                                input(class="rich-checkbox__input" type="checkbox" id="checkbox-specialist" data-type="specialist")
-                                div(class="rich-checkbox__descr") На 1 этаже вас встретит специалист и проводит до номера.
-
-
-
-                <!-- здесь нужно будет продолжить среднюю часть верстки -->
+                //- здесь нужно будет продолжить среднюю часть верстки
 
             .form-elements.form-elements--right
                 .form-elements-item
                     .form-elements__slider-wrapper
-                        .form-elements__descr
-                            span  range slider
+                        +formElementsHeader('range slider')
                         .form-elements__slider-title
                             div(class="extra-controls")
                                 input(type="text" class="js-input-from extra-controls__title" value="0" readonly)
@@ -300,43 +276,32 @@ block form-section
 
                 .form-elements-item
                     form(action="")
-                        .form-elements__descr
-                            span  buttons
+                        +formElementsHeader('buttons')
                         .form-elements__buttons
-                            .form-elements__btn
-                                button(class="button") Click me
-                            .form-elements__btn
-                                button(class="button button_disabled") Click me
-                            .form-elements__btn
-                                button(class="rounded-button") Click me
-                            .form-elements__btn
-                                button(class="rounded-button rounded-button_disabled") Click me
-                            .form-elements__btn
-                                div(class="simple-button") Click me
-                            .form-elements__btn
-                                div(class="simple-button simple-button_disabled") Click me
-                            .form-elements__btn
-                                button(class="long-button") Перейти к оплате
-                                    i(class="long-button__icon") arrow_forward
+                            +button('button', 'Click me')
+                            +button('button button_disabled', 'Click me')
+                            +button('rounded-button', 'Click me')
+                            +button('rounded-button rounded-button_disabled', 'Click me')
+                            +simpleButton('simple-button', 'Click me')
+                            +simpleButton('simple-button simple-button_disabled', 'Click me')
+                            +longButton('long-button', 'Перейти к оплате', 'long-button__icon', 'arrow_forward')
 
                 .form-elements-item
-                    .form-elements__descr
-                        span  pagination
+                    +formElementsHeader('pagination')
                     .form-elements__pagination
                         .pagination
-                            a(class="pagination__item pagination__item_active" href="/mock-address") 1
-                            a(class="pagination__item" href="/mock-address") 2
-                            a(class="pagination__item" href="/mock-address") 3
+                            +pagination('pagination__item pagination__item_active', '/mock-address', '1')
+                            +pagination('pagination__item', '/mock-address', '2')
+                            +pagination('pagination__item', '/mock-address', '3')
                             div(class="pagination__item") ...
-                            a(class="pagination__item" href="/mock-address") 15
+                            +pagination('pagination__item', '/mock-address', '15')
                             button(class="pagination__next")
                             div(class="pagination__info") 1 – 12 из 100+ вариантов аренды
 
                 .form-elements-item
                     .form-elements__dropdown
                         form(action="")
-                            .form-elements__descr
-                                span dropdown
+                            +formElementsHeader('dropdown')
                             .form-elements__input--dropdown
                                 input(class="text-field--dropdown" placeholder="Сколько гостей" readonly="readonly")
                                 i(class="material-icons") expand_more
@@ -364,15 +329,11 @@ block form-section
                 .form-elements-item
                     .form-elements__bullet
                         form(action="")
-                            .form-elements__descr
-                                span bullet list
+                            +formElementsHeader('bullet list')
                             ul(class="bullet")
-                                li(class="bullet__elem")
-                                    span(class="bullet__item") Нельзя с питомцами
-                                li(class="bullet__elem")
-                                    span(class="bullet__item") Без вечеринок и мероприятий
-                                li(class="bullet__elem")
-                                    span(class="bullet__item") Время прибытия — после 13:00, а выезд до 12:00
+                                +bulletList('Нельзя с питомцами')
+                                +bulletList('Без вечеринок и мероприятий')
+                                +bulletList('Время прибытия — после 13:00, а выезд до 12:00')
 
             .form-elements--bottom
                 .form-elements-item
