начала верстать cards через миксины

--- a/toxin/src/blocks/form-elements/buttons/buttons.pug
+++ b/toxin/src/blocks/form-elements/buttons/buttons.pug
@@ -7,6 +7,5 @@ mixin simpleButton(btnClassName, title)
         div(class= btnClassName) #{title}
 
 mixin longButton(btnClassName, title, iconClassName, iconName)
-    .form-elements__btn
-        button(class= btnClassName) #{title}
-            i(class= iconClassName) #{iconName}
+    button(class= btnClassName) #{title}
+        i(class= iconClassName) #{iconName}s
