--- a/toxin/src/blocks/form-elements/dropdown/dropdown.scss
+++ b/toxin/src/blocks/form-elements/dropdown/dropdown.scss
@@ -43,6 +43,7 @@
     border: 1px solid rgba(31,32,65,0.25);
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
+    background-color: #fff;
     width: 319px;
     height: 159px;
     display: none;
