начала регистрация аккаунта через миксин

--- a/toxin/src/blocks/form-elements/buttons/buttons.pug
+++ b/toxin/src/blocks/form-elements/buttons/buttons.pug
@@ -8,4 +8,4 @@ mixin simpleButton(btnClassName, title)
 
 mixin longButton(btnClassName, title, iconClassName, iconName)
     button(class= btnClassName) #{title}
-        i(class= iconClassName) #{iconName}s
+        i(class= iconClassName) #{iconName}
